test/good/ex10.cb
def foo() -> fn(int) -> int {
    return {
        \x -> x
    }
}

def main() {
    printInt(foo()(123));
}
