test/bad/ex6.cb
def foo() -> int {
    if true {}
}
